criação inicial do header e corpo

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
     </header>
     <main>
         <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">House of Cards</h3>
+                <p class="descricao">
+                    Nada pode impedir o político sem escrupulosos, Frank Underwood, de conquistar Washington.
+                    <br/>Mas mal ele sabe do que sua esposa, Clair, é capaz...
+                </p>
+                <div class="botoes">
+                    <button role="button">ASSISTIR AGORA</button>
+                    <button role="button">MAIS INFORMAÇÕES</button>
+                </div>
+            </div>
             
         </div>
     </main>
