--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
                     <br/>Mas mal ele sabe do que sua esposa, Clair, é capaz...
                 </p>
                 <div class="botoes">
-                    <button role="button">ASSISTIR AGORA</button>
-                    <button role="button">MAIS INFORMAÇÕES</button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                        ASSISTIR
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
                 </div>
             </div>
             
         </div>
     </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
