--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NETFLIX CLONE</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/main.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -23,11 +28,13 @@
     </header>
     <main>
         <div class="filme-principal">
+
             <div class="container">
+
                 <h3 class="titulo">House of Cards</h3>
                 <p class="descricao">
                     Nada pode impedir o político sem escrupulosos, Frank Underwood, de conquistar Washington.
-                    <br/>Mas mal ele sabe do que sua esposa, Clair, é capaz...
+                    <br />Mas mal ele sabe do que sua esposa, Clair, é capaz...
                 </p>
                 <div class="botoes">
                     <button role="button" class="botao">
@@ -39,11 +46,15 @@
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
+
             </div>
-            
+
         </div>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
+        integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
+
 </html>
